components/component-python/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: e2e-multiple-components
    appstudio.openshift.io/component: component-python
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elcomponent-python
  namespace: e2e-demo-yvsd
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-component-python
    weight: null
status: {}
